--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "name": "course_front",
-    "version": "1.0.0",
-    "description": "course junior frontend-developer",
-    "author": "pluhindanil46@gmail.com",
+    "version": "0.0",
+    "description": "course frontend junior",
+    "author": "denchaplushev@mail.ru",
     "devDependencies": {
         "autoprefixer": "^10.4.2",
         "browser-sync": "^2.27.7",
         "del": "^6.0.0",
         "gulp": "^4.0.2",
         "gulp-csso": "^4.0.1",
+        "gulp-file-include": "^2.3.0",
         "gulp-format-html": "^1.2.5",
         "gulp-imagemin": "^8.0.0",
         "gulp-less": "^5.0.0",
